--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.0.15",
+    "@types/next": "^9.0.0",
     "bootstrap": "^5.3.3",
+    "next": "^14.1.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "sonner": "^1.4.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
